# vietnamese-word-segment

./: README.md  pyproject.toml
vwsegment/: __init__.py  word_segments.py
